<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/rounded_gradient_background"
    android:orientation="vertical"
    android:gravity="top">

    <!-- logo -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="Logo de la app"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <!-- titulo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <!-- contenedor del REGISTRO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_container"
        android:padding="24dp"
        android:orientation="vertical">

        <!-- nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#3F51B5"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- apellido -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#3F51B5"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#3F51B5"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#3F51B5"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- confirmar contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#3F51B5"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password2"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- mensaje de error -->
        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:visibility="gone"
            android:layout_marginTop="8dp" />

        <!-- boton registro -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/GradientButtonStyle"
            android:text="@string/btn_star"
            android:layout_marginTop="18dp"/>

        <!-- link a registro -->
        <TextView
            android:id="@+id/textRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/btn_message_register"
            android:textColor="#3F51B5"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>
